Examples/Semantics/success/ifexpressionblock.cl
class Test {
  foo:Test;
  bar(x : Int) : Bool { 
    if x = 3 then 
      {1; 2; true;} 
    else
      false 
    fi
  };
};
