Examples/Semantics/fail/equalsassociativity.cl
class Test {
  x:Int;
  y:Int;
  z:Int;
  bar():Int {x=y=z};
};
